<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#131215">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_received"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        tools:src="@android:color/darker_gray"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_received"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:layout_marginStart="28dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/tv_repository"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_followers"
            android:paddingTop="4dp"
            android:text="@string/txt_repository"
            android:textColor="@color/cardview_light_background"/>

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/txt_repository"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/tv_followers"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txt_repository"
            android:layout_below="@+id/tv_followers"
            android:layout_marginStart="9dp"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/followers"
            android:textColor="@color/cardview_light_background"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/txt_followers"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/tv_followers"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_followers"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/txt_followers"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:text="@string/following"
            android:textColor="@color/cardview_light_background"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/txt_description"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_received"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_received"
            android:textColor="@color/cardview_light_background"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_received"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_received"
            android:textColor="@color/cardview_light_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textStyle="bold"
            android:text="@string/location"
            android:textColor="@color/cardview_light_background"/>
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_location"
            android:paddingTop="4dp"
            android:textColor="@color/cardview_light_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_description"
        android:gravity="center">

        <Button
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/follow"
            android:textSize="12sp" />

        <Button
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/share"
            android:textSize="12sp" />

        <Button
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/email"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>