<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:padding="8dp"
        android:background="#131215">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="#756B85"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_photo"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/img_photo"
            android:text="@string/name"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/img_photo"
            android:ellipsize="end"
            android:textColor="@color/cardview_light_background"
            android:text="@string/username" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>